--- a/configs/s5p6818_nanopi3_defconfig
+++ b/configs/s5p6818_nanopi3_defconfig
@@ -41,5 +41,6 @@ CONFIG_VIDEO_NX=y
 CONFIG_VIDEO_NX_RGB=y
 CONFIG_VIDEO_NX_LVDS=y
 CONFIG_VIDEO_NX_HDMI=y
+CONFIG_VIDEO_NX_MIPI=y
 CONFIG_REGEX=y
 CONFIG_ERRNO_STR=y
