--- a/configs/s5p6818_nanopi3_defconfig
+++ b/configs/s5p6818_nanopi3_defconfig
@@ -39,7 +39,7 @@ CONFIG_USB_STORAGE=y
 CONFIG_DISPLAY_PORT=y
 CONFIG_VIDEO_NX=y
 # CONFIG_VIDEO_NX_RGB is not set
-# CONFIG_VIDEO_NX_LVDS is not set
+CONFIG_VIDEO_NX_LVDS=y
 CONFIG_VIDEO_NX_MIPI=y
 CONFIG_VIDEO_NX_HDMI=y
 CONFIG_REGEX=y
